# Secura

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini  testfile.txt  testfile.txt.enc  vcpkg.json
include/secura/: cli.hpp  crypto.hpp  decryptor.hpp  encryptor.hpp  gui.hpp  key_manager.hpp  rsa_decryptor.hpp  rsa_encryptor.hpp  rsa_key_pair.hpp  types.hpp  version.hpp
src/: cli.cpp  decryptor.cpp  encryptor.cpp  gui.cpp  gui_main.cpp  key_manager.cpp  main.cpp  placeholder.cpp  rsa_decryptor.cpp  rsa_encryptor.cpp  rsa_key_pair.cpp
tests/: test_crypto.cpp  test_key_manager.cpp  test_placeholder.cpp  test_rsa.cpp
